crates/nash-parse/src/expression/snapshots/nash_parse__expression__do___tests__bind_and_expressions.snap
---
source: crates/nash-parse/src/expression/do_.rs
description: "Code (indented inside a def):\n\n    do\n        x <- generate int\n        label \"small\"\n        assert (x < 100)\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 5,
        },
        end: Position {
            line: 4,
            column: 25,
        },
    },
    value: Do {
        stmts: [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 9,
                    },
                    end: Position {
                        line: 2,
                        column: 26,
                    },
                },
                value: Bind {
                    pattern: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 9,
                            },
                            end: Position {
                                line: 2,
                                column: 10,
                            },
                        },
                        value: Var(
                            "x",
                        ),
                    },
                    expr: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 14,
                            },
                            end: Position {
                                line: 2,
                                column: 26,
                            },
                        },
                        value: Call {
                            function: Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 14,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 22,
                                    },
                                },
                                value: Var {
                                    kind: LowVar,
                                    name: "generate",
                                },
                            },
                            arguments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 23,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 26,
                                        },
                                    },
                                    value: Var {
                                        kind: LowVar,
                                        name: "int",
                                    },
                                },
                            ],
                        },
                    },
                },
            },
            Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 9,
                    },
                    end: Position {
                        line: 3,
                        column: 22,
                    },
                },
                value: Expr(
                    Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 9,
                            },
                            end: Position {
                                line: 3,
                                column: 22,
                            },
                        },
                        value: Call {
                            function: Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 9,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 14,
                                    },
                                },
                                value: Var {
                                    kind: LowVar,
                                    name: "label",
                                },
                            },
                            arguments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 15,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 22,
                                        },
                                    },
                                    value: Str(
                                        "small",
                                    ),
                                },
                            ],
                        },
                    },
                ),
            },
        ],
        last: Located {
            region: Region {
                start: Position {
                    line: 4,
                    column: 9,
                },
                end: Position {
                    line: 4,
                    column: 25,
                },
            },
            value: Assert(
                Located {
                    region: Region {
                        start: Position {
                            line: 4,
                            column: 17,
                        },
                        end: Position {
                            line: 4,
                            column: 24,
                        },
                    },
                    value: BinOps {
                        operands: [
                            BinOpOperand {
                                expr: Located {
                                    region: Region {
                                        start: Position {
                                            line: 4,
                                            column: 17,
                                        },
                                        end: Position {
                                            line: 4,
                                            column: 18,
                                        },
                                    },
                                    value: Var {
                                        kind: LowVar,
                                        name: "x",
                                    },
                                },
                                op: Located {
                                    region: Region {
                                        start: Position {
                                            line: 4,
                                            column: 19,
                                        },
                                        end: Position {
                                            line: 4,
                                            column: 20,
                                        },
                                    },
                                    value: "<",
                                },
                            },
                        ],
                        last: Located {
                            region: Region {
                                start: Position {
                                    line: 4,
                                    column: 21,
                                },
                                end: Position {
                                    line: 4,
                                    column: 24,
                                },
                            },
                            value: Int(
                                100,
                            ),
                        },
                    },
                },
            ),
        },
    },
}
