crates/nash-parse/src/expression/snapshots/nash_parse__expression__do___tests__constructor_bind.snap
---
source: crates/nash-parse/src/expression/do_.rs
description: "Code (indented inside a def):\n\n    do\n        Just x <- m\n        pure x\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 5,
        },
        end: Position {
            line: 3,
            column: 15,
        },
    },
    value: Do {
        stmts: [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 9,
                    },
                    end: Position {
                        line: 2,
                        column: 20,
                    },
                },
                value: Bind {
                    pattern: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 9,
                            },
                            end: Position {
                                line: 2,
                                column: 16,
                            },
                        },
                        value: Ctor {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 9,
                                },
                                end: Position {
                                    line: 2,
                                    column: 13,
                                },
                            },
                            name: "Just",
                            args: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 14,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 15,
                                        },
                                    },
                                    value: Var(
                                        "x",
                                    ),
                                },
                            ],
                        },
                    },
                    expr: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 19,
                            },
                            end: Position {
                                line: 2,
                                column: 20,
                            },
                        },
                        value: Var {
                            kind: LowVar,
                            name: "m",
                        },
                    },
                },
            },
        ],
        last: Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 9,
                },
                end: Position {
                    line: 3,
                    column: 15,
                },
            },
            value: Call {
                function: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 9,
                        },
                        end: Position {
                            line: 3,
                            column: 13,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "pure",
                    },
                },
                arguments: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 14,
                            },
                            end: Position {
                                line: 3,
                                column: 15,
                            },
                        },
                        value: Var {
                            kind: LowVar,
                            name: "x",
                        },
                    },
                ],
            },
        },
    },
}
