crates/nash-parse/src/expression/snapshots/nash_parse__expression__do___tests__error_empty_do.snap
---
source: crates/nash-parse/src/expression/do_.rs
description: "Code (indented inside a def):\n\n    do\n"
info: diagnostic
---
nash::syntax

  × Expected a statement after `do`.
   ╭─[src/Main.nash:1:7]
 1 │     do
   ·       ─
   ╰────
  help: Add an indented statement.
