crates/nash-parse/src/expression/snapshots/nash_parse__expression__do___tests__error_trailing_bind.snap
---
source: crates/nash-parse/src/expression/do_.rs
description: "Code (indented inside a def):\n\n    do\n        x <- e\n"
info: diagnostic
---
nash::syntax

  × A do block must end with an expression.
   ╭─[src/Main.nash:2:9]
 1 │     do
 2 │         x <- e
   ·         ─
   ╰────
  help: Add a final expression after this binding.
