crates/nash-parse/src/expression/snapshots/nash_parse__expression__do___tests__let_expression_statement.snap
---
source: crates/nash-parse/src/expression/do_.rs
description: "Code (indented inside a def):\n\n    do\n        let y = 1 in pure y\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 5,
        },
        end: Position {
            line: 2,
            column: 28,
        },
    },
    value: Do {
        stmts: [],
        last: Located {
            region: Region {
                start: Position {
                    line: 2,
                    column: 9,
                },
                end: Position {
                    line: 2,
                    column: 28,
                },
            },
            value: Let {
                defs: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 13,
                            },
                            end: Position {
                                line: 2,
                                column: 19,
                            },
                        },
                        value: Define {
                            name: Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 13,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 14,
                                    },
                                },
                                value: "y",
                            },
                            args: [],
                            body: Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 17,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 18,
                                    },
                                },
                                value: Int(
                                    1,
                                ),
                            },
                            annotation: None,
                        },
                    },
                ],
                body: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 22,
                        },
                        end: Position {
                            line: 2,
                            column: 28,
                        },
                    },
                    value: Call {
                        function: Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 22,
                                },
                                end: Position {
                                    line: 2,
                                    column: 26,
                                },
                            },
                            value: Var {
                                kind: LowVar,
                                name: "pure",
                            },
                        },
                        arguments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 27,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 28,
                                    },
                                },
                                value: Var {
                                    kind: LowVar,
                                    name: "y",
                                },
                            },
                        ],
                    },
                },
            },
        },
    },
}
